Fix issue on narrow displays never going narrower than 1000px
The idea of the min-width: 1000px was to ensure that the page didn't
become too narrow with unnecessary margin, but if there is less than
1000px then the website should use all avaliable space.

--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -15,7 +15,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 60%;
-    min-width: 1000px;
+    min-width: calc(min(100%, 1000px));
     max-width: 2000px;
     padding: 0px;
     background-color: #FFFFFF;
